fix overflow problem

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,9 +9,6 @@
 	vertical-align: baseline;
 }
 
-body {
-	overflow: hidden;
-}
 /*#Navigation*/
 
 .nav {
@@ -105,10 +102,14 @@ body {
 }
 
 .wrapper-menu-open {
-	width: 100%;
-	margin-left: 300px;
-	overflow-x: hidden;
+	width: 100vw;
 	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container-open {
+	width: calc(100vw - 300px);
+	overflow-x: hidden;
+	margin-left: 300px;
 }
 
 .second-level {
